--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "@types/node": "^12.19.3",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "@types/react-hamburger-menu": "0.0.3",
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.8.0",
     "firebase": "^8.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hamburger-menu": "^1.2.1",
+    "react-indiana-drag-scroll": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
