--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-indiana-drag-scroll": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-tracked": "^1.4.2",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
